fix vertical overflow

--- a/main.css
+++ b/main.css
@@ -13,6 +13,10 @@ body, html {
     color: transparent;
     background-color: transparent;
     caret-color: white;
+
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 #syntax {
     color: white;
@@ -30,18 +34,18 @@ body, html {
     box-sizing: border-box;
     font-size: 30px;
     font-family: inherit;
-    position: absolute;
-    top: 0;
-    left: 0;
     padding: 20px;
+    overflow: hidden;
+    word-wrap: none;
+    white-space: nowrap;
 }
 
 #input_wrap {
     box-sizing: border-box;
     resize: none;
-    width: 100%;
-    height: 150px;
+    overflow: auto;
     position: relative;
+    flex: none;
 }
 #output {
     padding: 20px;
